# meridian-jd-rag

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  NOTICE.md  README.md  SECURITY.md  pyproject.toml  requirements-ci.txt  requirements.txt
.githooks/: pre-commit
.github/workflows/: ci.yml
api/: __init__.py  app.py
api/graph/: __init__.py  builder.py  nodes.py
config/: __init__.py  ci.yaml  default.yaml  loader.py
core/: __init__.py  models.py
corpus/compliance/: MJD-CMP-0001.md  MJD-CMP-0002.md  MJD-CMP-0003.md  MJD-CMP-0004.md  MJD-CMP-0005.md  MJD-CMP-0006.md  MJD-CMP-0007.md  MJD-CMP-0008.md
corpus/finance/: MJD-FIN-0001.md  MJD-FIN-0002.md  MJD-FIN-0003.md  MJD-FIN-0004.md  MJD-FIN-0005.md
corpus/operations/: MJD-OPS-0001.md  MJD-OPS-0002.md  MJD-OPS-0003.md  MJD-OPS-0004.md  MJD-OPS-0005.md  MJD-OPS-0006.md  MJD-OPS-0007.md  MJD-OPS-0008.md  MJD-OPS-0009.md
corpus/retail/: MJD-RET-0001.md  MJD-RET-0002.md  MJD-RET-0003.md
corpus/risk/: MJD-RSK-0001.md  MJD-RSK-0002.md  MJD-RSK-0003.md  MJD-RSK-0004.md  MJD-RSK-0005.md  MJD-RSK-0006.md  MJD-RSK-0007.md
corpus/security/: MJD-SEC-0001.md  MJD-SEC-0002.md  MJD-SEC-0003.md  MJD-SEC-0004.md  MJD-SEC-0005.md  MJD-SEC-0006.md  MJD-SEC-0007.md  MJD-SEC-0008.md  MJD-SEC-0009.md  MJD-SEC-0010.md
corpus/technology/: MJD-TEC-0001.md  MJD-TEC-0002.md  MJD-TEC-0003.md  MJD-TEC-0004.md  MJD-TEC-0005.md  MJD-TEC-0006.md  MJD-TEC-0007.md  MJD-TEC-0008.md  MJD-TEC-0009.md
docs/: contracts.md  gap-register.md
docs/adr/: 001-chunking-strategy.md  002-pgvector-plus-postgres-fts.md  003-provider-interface-and-adapters.md  004-fail-closed-retrieval-time-abac.md  005-eval-thresholds-and-ci-gate.md  006-docs-sync-rule.md
evals/: __init__.py  ci_suite.py  report.py  runner.py
generation/: __init__.py  generator.py  guardrails_input.py  guardrails_output.py  pipeline.py  prompts.py
infra/: Dockerfile.api  Dockerfile.ui  README.md  docker-compose.yml
ingestion/: __init__.py  embed.py  index.py  metadata.py  pii.py  schema.sql  tokens.py
observability/: __init__.py  audit.py  tracing.py
providers/: README.md  __init__.py  anthropic_adapter.py  base.py  factory.py  gemini_adapter.py  local.py  mock.py  openai_adapter.py  secrets.py
retrieval/: __init__.py  access.py  assemble.py  citations.py  hybrid.py  pipeline.py  repository.py  rerank.py  transform.py
scripts/: check_docs_sync.sh  check_em_dash.sh  check_pinning.sh  ci_eval_gate.sh  ingest.py  prove_access_control.py  secret_scan.sh
security/: THREAT_MODEL.md
tests/: test_access.py  test_api.py  test_evals.py  test_generation.py  test_graph.py  test_guardrails.py  test_ingestion.py  test_providers.py  test_retrieval.py
ui/: .env.example  README.md  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
wiki/: ADR-Index.md  Access-Control-Model.md  Architecture-Overview.md  Chunking-Strategy.md  Eval-Methodology.md  Glossary.md  Home.md  Operations-and-Observability.md  Provider-and-Config-Guide.md  RAG-Pipeline-Deep-Dive.md  Threat-Model-Walkthrough.md
(+45 files in other folders)
